Optimize event calling with LambdaMetafactory
Use LambdaMetafactory to create Consumers dynamically which invoke the
individual listener methods.
Also replaced some get-or-put with computeIfAbsent calls.